# simple_planning_interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: waypoints.yaml
include/simple_planning_interface/: basic_interface.h  inspection_mission_interface.h  racer_interface.h
launch/: basic_interface.launch  depth_planner.launch  inspection_mission_interface.launch  racer_interface.launch  visualize_interface.launch
rviz/: rviz_depth_planner.rviz  rviz_interface.rviz  rviz_racer_interface.rviz  rviz_visualization_mapping.rviz  rviz_visualization_trajectory.rviz
src/: basic_interface.cpp  basic_interface_node.cpp  inspection_mission_interface.cpp  inspection_mission_interface_node.cpp  racer_interface.cpp  racer_interface_node.cpp
