<?xml version="1.0"?>
<package>
  <name>simple_planning_interface</name>
  <version>0.11.0</version>
  <description>The simple_planning_interface package</description>

  <maintainer email="phxhuy@gmail.com">Huy Pham</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/phxhuy/simple_planning_interface</url>

  <author >Huy Pham</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>